@@ -39,6 +39,7 @@
                 </dependency>
             </dependencies>
             <configuration>
+		<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                 <threadCount>1</threadCount>
             </configuration>
         </plugin>
